
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Feb-2012 Jean-Marie Simonet
 # [#26468] Unable to install multiple updates at once. Thanks Rune and Jeremy
 # [#27918] Date format in /plugins/usr/profile/profile.php is wrong. Thanks Ofer.
 # [#27870] Joomla 2.5 com_content generates non-valid xhtml. Thanks Mihail

-------------------- 2.5.1 Stable Release [02-Feb-2012] ------------------

01-Feb-2012 Mark Dexter
 ^ [#27941] Add warning/no warning icons on Database screen
 # [#27938] labels missing for Smart Search / Finder module

01-Feb-2012 Christophe Demko
 # [#27920] Update SQL query requires temp table permissions (Mark Dexter)
 # [#27873] The related articles modules (mod_related_items) are not showing (Mark Dexter)

01-Feb-2012 Jean-Marie Simonet
 # [#27929] *Installing sample data and defining as site lang another lang then English breaks links. Thanks Christophe.
 $ [#27796] COM_USERS_FITLER_NOTES. Thanks Brian.
 $ Other language corrections com_media.
 # [#27774] Joomla on Windows Azure - Load time is slow. Thanks Sudhi
 # [#27581] Basic Search contact search is broken. Thanks Elin.
 # [#27890] mod_menu invalid rendering of items of type alias and url. Thanks Elin.
 # [#27829] $app variable can possibly not be set, causing a PHP error. Thanks Michael
 # [#27862] Code error plgUserProfile line 188. Thanks A. Kirk and Viet.
 # [#27868] Joomla 1.7.x batch processing allow move items to trashed categories. Thanks Michael
 # [#27916] Path of home sub-menu items contain "News Feeds". Thanks Mark

31-Jan-2012 Christophe Demko
 ^ [#27905] Upgrade MooTools to version 1.4.3 (Rouven Weßling)
 # [#27662] Can't update #__update_sites table at extension install on SQL Server (Michael Babker)
 # [#27872] Error in Banner Track Clicks (Evan Nazareno)
 # [#27919] Extension Manager: Database does not fix text filter problem (Jean-Marie Simonet, Mark Dexter)

31-Jan-2012 Jean-Marie Simonet