@@ -224,8 +224,8 @@
 		    label="COM_CONTENT_FIELD_URLSPOSITION_LABEL"
 			description="COM_CONTENT_FIELD_URLSPOSITION_DESC">
 			<option value="">JGLOBAL_USE_GLOBAL</option>
-			<option value="0">JABOVE</option>
-			<option value="1">JBELOW</option>
+			<option value="0">COM_CONTENT_FIELD_OPTION_ABOVE</option>
+			<option value="1">COM_CONTENT_FIELD_OPTION_BELOW</option>
 		</field>
 		</fieldset>
 	</fields>
