@@ -7,6 +7,9 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
+// no direct access
+defined('_JEXEC') or die;
+
 // Create shortcut
 $urls = json_decode($this->item->urls);
 
